@@ -410,6 +410,7 @@
     <string name="logs_copied_to_clipboard">Logs copied to clipboard</string>
 
     <string name="label_browser_configuration">Browser configuration</string>
+    <string name="no_market_app">No market app found, please install manually</string>
 
     <string name="unset">Unset</string>
 </resources>
