@@ -8,6 +8,7 @@
    * configuring addressbook subscriptions
    * using a configuration wizard
    * saving tunnel settings
+   * installing a browser without a market app
  * Update Firefox browser config instructions for Firefox Quantum
  * Translation updates
 
